fixed sc9roll and align bugs

--- a/style/style.css
+++ b/style/style.css
@@ -17,6 +17,8 @@ h1 {
   margin-left: 2vw;
   margin-right: 2vw;
   color: red;
+  position: absolute;
+  top: 25vw;
 }
 
 #contentWrapper {
@@ -149,7 +151,7 @@ br {
 
 #plusWrapper {
   display: none;
-  width: 80%;
+  width: 100%;
   position: fixed;
 }
 
@@ -158,10 +160,17 @@ br {
 }
 
 #deletedEntriesWrapper {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
+  /* width: 80vw; */
+height: 70vh;
+position: relative;
+left: 0;
+overflow-y: scroll !important;
+display: flex;
+/* justify-content: center; */
+align-items: center;
+flex-direction: column;
+/* padding-right: 10%; */
+padding-bottom: 50vh;
 }
 
 /* Special Text */
@@ -197,23 +206,28 @@ br {
 
 #addWrapper {
   margin-left: 10%;
+  margin-top: 5%;
+  width: 80vw;
 }
 
 /* Liste */
 
 #entryWrapper {
-  width: 100vw;
-  height: auto;
-  overflow-y: scroll !important;
-  overflow-x: hidden;
-  display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+  /* width: 80vw; */
+height: 80vh;
+position: relative;
+left: 0;
+overflow-y: scroll !important;
+display: flex;
+/* justify-content: center; */
+align-items: center;
+flex-direction: column;
+/* padding-right: 10%; */
+padding-bottom: 50vh;
 }
 
 .eintrag {
-  width: 80%;
+  width: 80vw;
   height: auto;
   box-shadow: rgba(0, 0, 0, 0.5) 2px 5px 15px 0px;
   border-radius: 10px;
@@ -223,9 +237,17 @@ br {
   font-size: 4vw;
 }
 
-.eintrag i {
+#entryWrapper .eintrag i {
   position: absolute;
-  right: 11vw;
+  left: 84vw;
+}
+
+#deletedEntriesWrapper .eintrag i {
+  position: absolute;
+  left: 81vw;
+}
+
+.eintrag i {
   font-size: 200%;
   cursor: pointer;
 }
